fixed issue of error message not showing on improper form entry. Added code to css to impact content-section bootstrap class. Need to finalize design of login then combine with backend and then work on database.

--- a/POFWebpage/static/styles/pof_style.css
+++ b/POFWebpage/static/styles/pof_style.css
@@ -149,7 +149,7 @@ header{
 
 
 header a{
-    color: #ECF0F1;
+    color: #8c9192;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
@@ -448,6 +448,22 @@ footer{
     margin-top: 30px;
 }
 
+
+#showcase_login .content-section{
+    width: 30%;
+    position: relative; 
+    text-align: center;
+    margin: auto;
+    vertical-align: middle;
+    border: #060606 3px solid;
+    background-color: #b5c0c2;
+    margin-top: 100px;
+    padding-bottom:30px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
+}
 
 
 
